# evolve

./: .gitignore  AGENT_TEAM_GUIDELINES.md  BUILD_FIXES.md  BUILD_STATUS.md  COMPILATION_FIXES_DOCUMENTATION.md  Cargo.toml  FINAL_COMPILATION_STATUS.md  PLACEHOLDER_IMPLEMENTATION_COMPLETION_REPORT.md  README.md  RESEARCH_PAPERS.md  SYSTEM_PROMPT_FOR_AGENTS.md  TASK_COMPLETION_SUMMARY.md  TEAM_COMMUNICATION_HUB.md  TODO.md  TODO_IMPLEMENTATION_LIST.md  build.rs  compilation_status_summary.md  example-config.yaml  instructions.md  jobs.md  package-lock.json  package.json  physics_engine_final_completion_report.md  physics_engine_final_status.md  physics_engine_fixes_summary.md  physics_engine_remaining_fixes.md  progress.md  test_cli_viz  test_cli_viz.rs  universe_sim_compilation_completion_report.md  universe_sim_compilation_progress_report.md  universe_sim_fixes_summary.md
.cursor/agents/: README.md
.cursor/agents/jobs/: consciousness.md  molecular_bio.md  physics_core.md
.cursor/agents/mutex/: crates_agent_evolution_src_consciousness.rs.mutex  crates_physics_engine_src_lib.rs.mutex  crates_physics_engine_src_molecular_dynamics.rs.mutex  crates_physics_engine_src_quantum_fields.rs.mutex
.github/workflows/: ci.yml
cli/: CLI_COMPLETION_REPORT.md  Cargo.toml
cli/examples/: test_visualization.rs
cli/src/: ascii_viz.rs  data_models.rs  formatters.rs  gpu_stress_test.rs  lib.rs  logging.rs  main.rs  rpc.rs
cli/src/commands/: inspect.rs  list_planets.rs  mod.rs  snapshot.rs  status.rs
cli/tests/: cli_integration_tests.rs
config/: default.toml  god_mode_default.toml  high_performance.toml  low_memory.toml
crates/agent_evolution/: Cargo.toml
crates/agent_evolution/src/: advanced_ai_integration.rs  ai_core.rs  ai_research_demo.rs  autonomous_communication.rs  consciousness.rs  contract_net.rs  curiosity.rs  decision_tracking.rs  embodied_agent.rs  emergent_neural_formation.rs  evolutionary_organism.rs  genetics.rs  hypernetwork.rs  integrated_information.rs  integration_test.rs  lib.rs  lineage_analytics.rs  memory_consolidation.rs  meta_learning.rs  microtubule_consciousness.rs  multi_agent_interactions.rs  natural_selection.rs  neural_physics.rs  neural_plasticity.rs  open_ended_evolution.rs  quantum_consciousness.rs  self_modification.rs  single_celled_organism.rs  standalone_demo.rs
crates/diagnostics/: Cargo.toml
crates/diagnostics/src/: lib.rs
crates/ffi_integration/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  build.rs  build_wrapper.sh  demo.rs  test_lib  test_lib.c
crates/ffi_integration/src/: demo.rs  endf.rs  endf_wrapper.h  gadget.rs  gadget_wrapper.h  geant4.rs  geant4_stubs.c  geant4_wrapper.cpp  geant4_wrapper.h  lammps.rs  lammps_wrapper.h  lib.rs  mod_file.rs  stub_syms.rs  types.rs
crates/native_renderer/: Cargo.toml  README.md
crates/native_renderer/src/: buffer_pool_test.rs  cosmological_renderer.rs  lib.rs  mac_config.rs  mac_touch_bar.rs  tests.rs
crates/native_renderer/src/shaders/: hdr_tonemapping.wgsl  heavy_mode.wgsl  mac_performance_monitor.wgsl  particle.wgsl  particle_compute_enhanced.wgsl  particle_culling.wgsl  particle_mac_optimized.wgsl  quantum_field.wgsl  scientific_overlay.wgsl  sph_advanced.wgsl  volumetric_field.wgsl
crates/native_renderer/tests/: renderer_tests.rs
crates/networking/: Cargo.toml
crates/physics_engine/: Cargo.toml
crates/physics_engine/src/: adaptive_mesh_refinement.rs  adaptive_quantum_classical.rs  atomic_data.rs  atomic_physics.rs  atomic_structures.rs  chemistry.rs  classical.rs  climate.rs  conservation.rs  constants.rs  cosmological_nbody.rs  cosmological_sph.rs  cosmology.rs  data_ingestion.rs  electromagnetic.rs  emergent_properties.rs  endf_data.rs  fft.rs  gadget_gravity.rs  general_relativity.rs  geodynamics.rs  gravitational_collapse.rs  interaction_events.rs  interactions.rs  jeans_instability.rs  legacy_mol_helpers.rs  lib.rs  molecular_dynamics.rs  molecular_helpers.rs  nuclear_physics.rs  octree.rs  particle_types.rs  particles.rs  phase_transitions.rs  qmc_md.rs  quantum.rs  quantum_ca.rs  quantum_chemistry.rs  quantum_fields.rs  quantum_math.rs  (+8 more)
crates/physics_engine/src/molecular_dynamics/: atomic_molecular_bridge.rs  force_fields.rs  integration.rs  neighbor_list.rs
crates/physics_engine/tests/: basic_integration_test.rs  comprehensive_particle_tests.rs  comprehensive_validation_tests.rs  integration_test_framework.rs  peer_review_validation.rs  qcd_validation.rs
crates/physics_types/: Cargo.toml
crates/scientific_constants/: Cargo.toml
crates/universe_sim/: Cargo.toml
crates/universe_sim/benches/: ai_bench.rs  physics_bench.rs
crates/universe_sim/src/: agent.rs  agents.rs  chemistry.rs  config.rs  constants.rs  cosmic_era.rs  entropy.rs  events.rs  evolution.rs  fusion.rs  lib.rs  persistence.rs  physics.rs  planet.rs  storage.rs  tech.rs  types.rs  universe.rs  utils.rs  world.rs
crates/universe_sim/tests/: compilation_fixes_tests.rs
demos/: 01_big_bang.rs  02_weak_interactions.rs  03_cosmological_nbody.rs  03_dashboard_quickstart.rs  04_bench60.rs  04_cosmological_sph.rs  05_tree_pm_gravity.rs  06_statistical_analysis.rs  07_stellar_nursery.rs  08_gpu_acceleration_stress_test.rs  Cargo.toml  GPU_STRESS_TEST_README.md  README.md  gpu_acceleration_stress_test.rs  main.rs
demos/outputs/: big_bang.csv  weak_interactions.csv
docs/: FFI_INTEGRATION.md  FFI_INTEGRATION_PLAN.md  TODO.md  ffi_removal.md  particle_physics.md
docs/research_proposals/: 2025-01-21_agent_qmc_researcher_MetaLearnedNonMarkovianQMC.md  2025-01-27_Agent_Quantum_Physics_QuantumMonteCarloMolecularDynamics.md  template.md
scripts/: setup_ffi_libraries.sh
src/ffi/: geant4.rs  mod.rs
test_validation/: Cargo.toml
test_validation/src/: basic_integration_test.rs  main.rs
tools/: smoke_dashboard.js
trainer/: Cargo.toml
trainer/src/: lib.rs
universewd/: Cargo.toml
universewd/src/: main.rs
viz_web/: Cargo.toml  index.html  test.html
viz_web/src/: auth.rs  handlers.rs  lib.rs  main.rs  realtime.rs  templates.rs
viz_web/static/: portal.css  portal.js
(+3 files in other folders)
