[workspace]
members = [
    "crates/universe_sim",
    "crates/physics_engine", 
    "crates/agent_evolution",
    "crates/networking",
    "crates/diagnostics",
    "crates/scientific_constants",
    "cli",
    "viz_web"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Universe Sim Team"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourorg/universe_sim"

[workspace.dependencies]
# Core dependencies
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# ECS and game engine
bevy_ecs = "0.12"

# Serialization 
rkyv = { version = "0.7", features = ["validation"] }
prost = "0.12"

# Math and physics
nalgebra = "0.32"
rand = "0.8"
rand_chacha = "0.3"

# Networking
quic = "0.9"
tokio-rustls = "0.24"

# Web and visualization 
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
macroquad = "0.4"

# Database and storage
sled = "0.34"

# Testing and benchmarking
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"

# Host integration
nix = "0.27"
libc = "0.2"

# Compression
zstd = "0.13"

# Configuration
config = "0.14"
clap = { version = "4.0", features = ["derive"] }

# Metrics
prometheus = "0.13"

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true