[workspace]
members = [
    "crates/universe_sim",
    "cli",
    "crates/physics_engine",
    "crates/agent_evolution",
    "crates/networking",
    "crates/diagnostics"
]
resolver = "2"

# Optional web dashboard crate built only when the `dashboard` feature is enabled
[workspace.optional]
dashboard = ["viz_web"]

[[bin]]
name = "big_bang_demo"
path = "demos/01_big_bang.rs"

[workspace.dependencies]
# Core simulation
bevy_ecs = "0.12"
rkyv = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1"
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rayon = "1.7"

# Physics and math
nalgebra = { version = "0.32", features = ["serde-serialize"] }
rand = "0.8"
rand_chacha = "0.3"
ordered-float = "4.0"
once_cell = "1.19"

# Networking
quinn = "0.10"  # QUIC implementation
tokio-tungstenite = "0.20"  # WebSocket for dashboard
rustls = "0.21"
rcgen = "0.11"  # Certificate generation

# Storage and serialization
sled = "0.34"  # Key-value store for low-memory mode
bincode = "1.3"
lz4_flex = "0.11"  # Compression
sha2 = "0.10"  # Cryptographic hashing

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
toml = "0.8"

# Monitoring and metrics
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"

# Web dashboard (WASM)
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
macroquad = "0.4"

# System integration
libc = "0.2"
nix = "0.27"
procfs = "0.16"

# Scientific computing
ndarray = "0.15"
approx = "0.5"

# AI/ML components
candle-core = "0.3"
candle-nn = "0.3"

# Testing
tempfile = "3.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true