[workspace]
members = [
    "cli",
    "crates/universe_sim",
    "crates/physics_engine",
    "crates/agent_evolution",
    "crates/networking",
    "crates/diagnostics",
    "crates/physics_types",
    "crates/native_renderer",
    "demos",
    "test_validation"
]
resolver = "2"

# Note: viz_web is always included in the workspace

[workspace.dependencies]
# Core simulation
bevy_ecs = "0.12"
rkyv = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_arrays = "0.1"
serde_json = "1.0"
tokio = { version = "1.0", default-features = false, features = ["rt", "time", "sync", "macros"] }
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rayon = "1.7"

# Physics and math
nalgebra = { version = "0.32", features = ["serde-serialize"] }
num-complex = { version = "0.4", features = ["serde"] }
rand = "0.8"
rand_distr = "0.4"
rand_chacha = "0.3"
getrandom = { version = "0.3", features = ["wasm_js"] }
ordered-float = "4.0"
once_cell = "1.19"

# Networking (minimal for RPC only)
warp = "0.3"
rustls = "0.21"
rcgen = "0.11"  # Certificate generation

# Storage and serialization
sled = "0.34"  # Key-value store for low-memory mode
bincode = "1.3"
lz4_flex = "0.11"  # Compression
sha2 = "0.10"  # Cryptographic hashing

# Configuration and CLI
clap = { version = "4.0", features = ["derive"] }
config = "0.13"
toml = "0.8"

# Monitoring and metrics
prometheus = "0.13"
tracing = "0.1"
tracing-subscriber = "0.3"
log = "0.4"
env_logger = "0.11"
console_error_panic_hook = "0.1.7"

# Web dashboard (WASM)
wasm-bindgen = "0.2"
web-sys = "0.3"
js-sys = "0.3"
macroquad = "0.4"

# System integration
libc = "0.2"
nix = "0.27"
procfs = "0.16"

# Scientific computing
ndarray = "0.15"
approx = "0.5"

# AI/ML components
candle-core = "0.3"
candle-nn = "0.3"

# Testing
tempfile = "3.8"
chrono = { version = "0.4", features = ["serde"] }

# FFI and C interop
libloading = "0.8"

# High-performance rendering
wgpu = "0.19"
winit = "0.29"
bytemuck = { version = "1.14", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true



