[package]
name = "universectl"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Universe Simulation"

[features]
default = ["native_renderer"]
native_renderer = ["dep:native_renderer"]
unstable-cli = []

[[bin]]
name = "universectl"
path = "src/main.rs"

[dependencies]
universe_sim = { path = "../crates/universe_sim" }
native_renderer = { path = "../crates/native_renderer", optional = true }
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
tracing-appender = "0.2"
serde = { workspace = true }
toml = { workspace = true }
warp = "0.3"
serde_json = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
bincode = "1.3.3"
miniz_oxide = "0.7"
tracing-log = "0.1"