[package]
name = "universectl"
version = "0.1.0"
edition = "2021"
description = "Command-line interface for the Evolve universe simulation engine"
authors = ["Universe Simulation Team"]

[[bin]]
name = "universectl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "color"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.8"
anyhow = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.27"
ratatui = "0.24"
rand = "0.8"
sled = "0.34"
bincode = "1.3"
humantime = "2.1"
byte-unit = "4.0"
colored = "2.0"
tabled = "0.14"
indicatif = "0.17"
dialoguer = "0.11"
flate2 = "1.0"

[dev-dependencies]
tempfile = "3.0"
assert_cmd = "2.0"
predicates = "3.0"