[package]
name = "demos"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "big_bang_demo"
path = "01_big_bang.rs"

[[bin]]
name = "weak_interactions_demo"
path = "02_weak_interactions.rs"

[dependencies]
physics_engine = { path = "../crates/physics_engine" }
anyhow = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
universe_sim = { path = "../crates/universe_sim", features = ["diagnostics"] }