[package]
name = "viz_web"
version = "0.1.0"
edition = "2021"
autobins = false

[lib]
name = "viz_web"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "viz_web_server"
path = "src/bin/server.rs"

[dependencies]
universe_sim = { path = "../crates/universe_sim", default-features = false }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true, features = ["v4", "js"] }
js-sys = { workspace = true }
web-sys = { workspace = true, features = [
    "Window", "Document", "HtmlCanvasElement", "CanvasRenderingContext2d",
    "WebSocket", "MessageEvent", "console", "BinaryType", "CloseEvent",
    "Location", "Element", "HtmlElement", "NodeList"
] }
wasm-bindgen = { workspace = true }
console_error_panic_hook = { workspace = true }
getrandom = { version = "0.3", features = ["wasm_js"] }
agent_evolution = { path = "../crates/agent_evolution", default-features = false }
physics_engine   = { path = "../crates/physics_engine", default-features = false }