[package]
name = "agent_evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bevy_ecs = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
physics_engine = { path = "../physics_engine" }