[package]
name = "agent_evolution"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
bevy_ecs = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
nalgebra = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
physics_engine = { path = "../physics_engine" }
physics_types = { path = "../physics_types" }

[features]
unstable-agent = []

[[bin]]
name = "standalone_demo"
path = "src/bin/standalone_demo.rs"

[[bin]]
name = "physics_integration_demo"
path = "src/bin/physics_integration_demo.rs"

[[bin]]
name = "embodied_demo"
path = "src/bin/embodied_demo.rs"

[[bin]]
name = "enhanced_environmental_demo"
path = "src/bin/enhanced_environmental_demo.rs"