[package]
name = "native_renderer"
version = "0.1.0"
edition = "2021"
description = "High-performance native renderer for universe simulation"

[lib]
name = "native_renderer"
path = "src/lib.rs"

[dependencies]
# Core dependencies
universe_sim = { path = "../universe_sim", default-features = false }
physics_engine = { path = "../physics_engine", default-features = false }

# High-performance graphics
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }

# Math and utilities
nalgebra = { workspace = true }
cgmath = "0.18"
rayon = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
env_logger = { workspace = true }

# Additional heavy mode dependencies for advanced rendering
instant = "0.1"
pollster = "0.3"
cfg-if = "1.0"

# New dependencies
glyphon = "0.5"
rand = "0.8.5"

[dev-dependencies]
approx = "0.5"
tokio = { version = "1.0", features = ["rt", "macros"] }
futures = "0.3"

[features]
default = []
# Heavy mode rendering with advanced physics visualization
heavy = [
    "physics_engine/heavy",
    "advanced-shaders",
    "multi-scale-rendering",
    "scientific-visualization"
]
# Experimental work-in-progress code; must be off in release CI
unstable-renderer = []
# Enhanced features for heavy mode
advanced-shaders = []
multi-scale-rendering = []
scientific-visualization = []
validation = [] 