[package]
name = "native_renderer"
version = "0.1.0"
edition = "2021"
description = "High-performance native renderer for universe simulation"

[lib]
name = "native_renderer"
path = "src/lib.rs"

[dependencies]
# Core dependencies
universe_sim = { path = "../universe_sim", default-features = false }
physics_engine = { path = "../physics_engine", default-features = false }

# High-performance graphics
wgpu = { workspace = true }
winit = { workspace = true }
bytemuck = { workspace = true }

# Math and utilities
nalgebra = { workspace = true }
cgmath = "0.18"
rayon = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
env_logger = { workspace = true }
num-complex = "0.4"  # For quantum field complex number calculations

# Serialization
serde = { workspace = true }
serde_json = "1.0"

# Additional heavy mode dependencies for advanced rendering
instant = "0.1"
pollster = "0.3"
cfg-if = "1.0"

# New dependencies
glyphon = "0.5"
rand = "0.8.5"

# Mac-specific dependencies
core-graphics = "0.23"  # For Mac-specific graphics operations
core-foundation = "0.9" # For Mac system integration

[dev-dependencies]
approx = "0.5"
tokio = { version = "1.0", features = ["rt", "macros"] }
futures = "0.3"

[features]
default = []
# Heavy mode rendering with advanced physics visualization
heavy = [
    "physics_engine/heavy",
    "advanced-shaders",
    "multi-scale-rendering",
    "scientific-visualization",
    "quantum-visualization"
]
# Experimental work-in-progress code; must be off in release CI
unstable-renderer = []
# Enhanced features for heavy mode
advanced-shaders = []
multi-scale-rendering = []
scientific-visualization = []
quantum-visualization = []  # Quantum-accurate visualization features
validation = []

# Mac-specific features
mac-optimized = []           # Mac-specific optimizations
mac-retina = []              # Retina display support
mac-touch-bar = []           # Touch Bar integration
mac-metal-optimized = []     # Metal backend optimizations
mac-performance-monitoring = [] # Mac performance monitoring
mac-apple-silicon = []       # Apple Silicon specific optimizations
mac-intel-gpu = []           # Intel GPU optimizations
mac-discrete-gpu = []        # Discrete GPU optimizations 