[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { workspace = true, features = ["serde"] }
ndarray = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_arrays = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
ordered-float = { workspace = true }
approx = { workspace = true }
bevy_ecs = { workspace = true, optional = true }
once_cell = { workspace = true }
log = { workspace = true }
endf_parser = "0.2.0"
physics_types = { path = "../physics_types" }
ffi_integration = { path = "../ffi_integration", default-features = false }
itertools = "0.10"
libm = "0.2"
tracing.workspace = true

[features]
default = ["gpu-acceleration", "bevy"]
# Enable full scientific fidelity at the cost of performance.
heavy = ["quantum-chemistry", "climate-sim", "geodynamics-sim", "amr", "gadget-gravity", "geant4-integration"]
gpu-acceleration = []
simd = []
bevy = ["dep:bevy_ecs"]
quantum-chemistry = []
climate-sim = []
geodynamics-sim = []
amr = []
gadget-gravity = []
geant4-integration = []
gadget = []
lammps = []
FALSE = []

[build-dependencies]
