[package]
name = "physics_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { workspace = true, features = ["serde"] }
ndarray = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
rand_distr = { workspace = true }
serde = { workspace = true }
serde_arrays = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
rayon = { workspace = true }
ordered-float = { workspace = true }
approx = { workspace = true }
once_cell = { workspace = true }
log = { workspace = true }
tracing = { workspace = true }
endf_parser = "0.2.0"
physics_types = { path = "../physics_types" }
itertools = "0.10"
libm = "0.2"

[features]
default = ["gpu-acceleration"]
# Enable full scientific fidelity at the cost of performance.
heavy = ["quantum-chemistry", "climate-sim", "geodynamics-sim", "amr"]
gpu-acceleration = []
simd = []
quantum-chemistry = []
climate-sim = []
geodynamics-sim = []
amr = []
FALSE = []