[package]
name = "universe_sim"
version = "0.1.0"
edition = "2021"

[dependencies]
physics_engine = { path = "../physics_engine" }
diagnostics = { path = "../diagnostics" }
bevy_ecs = { workspace = true }
rkyv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
rayon = { workspace = true }
nalgebra = { workspace = true }
rand = { workspace = true }
rand_chacha = { workspace = true }
tracing = { workspace = true }
config = { workspace = true }
toml = { workspace = true }
bincode = { workspace = true }
md5 = "0.7.0"

[dev-dependencies]
approx = "0.5"

[features]
default = ["full-simulation"]
full-simulation = []
headless = []
low-memory = []
diagnostics = []
gadget = []